# CPT114514

./: .gitignore
CPT/OMM日报系统-Tauri/: .gitignore  AGENTS.md  CURRENT_STATUS.md  HANDOVER.md  OMM报表系统技术文档.md  OMM日报系统-v5.0.3-修复交接.md  OMM日报系统-v5.0.5-手量审查反馈.md  OMM日报系统-v5.0.6-修复交接.md  OMM日报系统-v5.0.6-预览决策与整形CNC补充需求.md  OMM日报系统-v5.0.8-品名工站识别规则与补充窗口设计.md  OMM日报系统-v5.0.8-识别补充实现交接.md  clear-cache.bat  dev.bat  index.html  opencode-handoff-v5.0.6.md  package-lock.json  package.json
CPT/OMM日报系统-Tauri/docs/: apple-inspired-ui-system-v5.0.15.md  codex-working-memory.md  handoff-v5.6.0-to-next-codex.md  new-codex-start-prompt.md  next-development-plan.md
CPT/OMM日报系统-Tauri/scripts/: package-portable.ps1  smoke-test.ps1
CPT/OMM日报系统-Tauri/sidecar/: build_sidecar.py  generate_report.py  requirements.txt  sidecar_main.py
CPT/OMM日报系统-Tauri/src/: App.tsx  index.css  main.tsx
CPT/OMM日报系统-Tauri/src-tauri/: Cargo.toml  tauri.conf.json
CPT/OMM日报系统-Tauri/src-tauri/capabilities/: default.json
CPT/OMM日报系统-Tauri/src-tauri/resources/: template.xlsx
CPT/OMM日报系统-Tauri/src-tauri/resources/tools/edge-cleaner/: clean-edge.bat  clean-edge.ps1
CPT/OMM日报系统-Tauri/src-tauri/src/: lib.rs  sidecar.rs
CPT/OMM日报系统-Tauri/src-tauri/src/commands/: accounts.rs  config.rs  data_store.rs  duration_rules.rs  file.rs  known_senders.rs  measurement_people.rs  mod.rs  personal_cleaner.rs  sidecar.rs
CPT/日期文件夹/6.10B/: 滁州量测室总体日报汇总表-OMM-禹欣-6.10B.xlsx
CPT/日期文件夹/6.11B/: 滁州量测室总体日报汇总表-OMM-禹欣-6.11B.xlsx
CPT/日期文件夹/6.12B/: 滁州量测室总体日报汇总表-OMM-禹欣-6.12B.xlsx
docs/: Git上传与异机部署说明.md
(+751 files in other folders)
