[package]
name = "omm-daily-report-v5"
version = "5.0.16"
description = "OMM日报系统 - Tauri + React + Python sidecar"
authors = ["Kaneshiro"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.19"
tokio = { version = "1.35", features = ["process", "io-util", "sync", "rt-multi-thread"] }
rand = "0.8"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
